Add the hero section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@ $custom-theme-colors: (
   "muted-cream": $muted-cream,
   "highlight": $highlight,
   "muted-gray": $muted-gray,
+  "body-bg": $body-bg,
 );
 
 // Merge with Bootstrap’s default theme colors
