--- a/src/index.css
+++ b/src/index.css
@@ -113,8 +113,13 @@ footer a:hover {
   }
 }
 
+.play-icon {
+  cursor: pointer;
+}
 
-
+.play-icon:active {
+  scale: 1.1;
+}
 
 /* body
   background-color: var(--bg);
