--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 
 header {
   background: var(--body-bg);
-  padding-top: 60px;
+  padding: 30px 0;
 }
 
 main {
@@ -32,9 +32,9 @@ img {
 
 
 
-.img-height {
+/* .img-height {
   height: 100%;
-}
+} */
 
 .custom-navbar {
   background-color: transparent;
@@ -89,9 +89,17 @@ footer a:hover {
   transform: scale(1.2);
 }
 
+.play-icon {
+  cursor: pointer;
+}
+
+.play-icon:active {
+  scale: 1.1;
+}
+
 @media screen and (min-width: 768px) {
   .small-img {
-    width: 21rem;
+    width: 17rem;
   }
 }
 
@@ -123,13 +131,7 @@ footer a:hover {
   }
 }
 
-.play-icon {
-  cursor: pointer;
-}
 
-.play-icon:active {
-  scale: 1.1;
-}
 
 /* body
   background-color: var(--bg);
